objects/CSS_JobHistory__c.object
<CustomObject>
    <fields>
        <fullName>Audit_Message__c</fullName>
        <label>Audit Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_Field_Name__c</fullName>
        <label>CSS Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_JobFormId__c</fullName>
        <description>These field is store the saved JobForm ID</description>
        <label>CSS_JobFormId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Job_Id__c</fullName>
        <label>CSS Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_New_Value__c</fullName>
        <label>CSS New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_Object_Name__c</fullName>
        <label>CSS Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Old_Value__c</fullName>
        <label>CSS Old Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify if the audit trail is entry was by system or user.</description>
        <label>System Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechnicianNotes__c</fullName>
        <label>TechnicianNotes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CSS_JobHistory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSS_JobHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_JobHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>